--- a/css/style.css
+++ b/css/style.css
@@ -726,7 +726,7 @@ select {
   padding: 24pt 0; }
 
 .landing__section:nth-child(odd) {
-  background-color: #fafafa;
+  background-color: #f7f7f7;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee; }
 
