--- a/css/style.css
+++ b/css/style.css
@@ -417,18 +417,18 @@ a {
   color: inherit; }
 
 .link {
-  color: #6C63FF;
+  color: teal;
   text-decoration: underline; }
   @media (min-width: 992px) {
     .link:hover {
-      color: #463aff; } }
+      color: teal; } }
 
 button, .button {
   display: inline-block;
   padding: 6pt 20pt;
   line-height: 1.7;
-  border: 1px solid #6C63FF;
-  color: #6C63FF;
+  border: 1px solid teal;
+  color: teal;
   font-weight: bolder;
   transition: 0.1s;
   white-space: nowrap;
@@ -443,17 +443,17 @@ button, .button {
     outline: 0; }
   @media (min-width: 992px) {
     button:hover, .button:hover {
-      border-color: #463aff;
-      color: #463aff; } }
+      border-color: teal;
+      color: teal; } }
 
 .button__primary {
-  background-color: #6C63FF;
-  border-color: #6C63FF;
+  background-color: teal;
+  border-color: teal;
   color: #fff; }
   @media (min-width: 992px) {
     .button__primary:hover {
       background-color: c;
-      border-color: #463aff;
+      border-color: teal;
       color: #fff; } }
 
 .button__accent {
@@ -646,8 +646,8 @@ select {
 
 [type="radio"]:checked + label:after {
   border-radius: 50%;
-  border: 1px solid #6C63FF;
-  background-color: #6C63FF;
+  border: 1px solid teal;
+  background-color: teal;
   z-index: 0;
   transform: scale(1.02); }
 
@@ -734,7 +734,7 @@ select {
   position: fixed;
   z-index: 100;
   width: 100%;
-  background-color: #6C63FF;
+  background-color: teal;
   transition: 0.7s; }
   .navbar--nofixed {
     position: relative;
@@ -874,13 +874,13 @@ select {
   width: 100%;
   opacity: 0.96;
   z-index: 1;
-  background-color: #6C63FF; }
+  background-color: teal; }
 
 .hero__overlay--gradient {
-  background: linear-gradient(to right, #6C63FF, #4641FF); }
+  background: linear-gradient(to right, teal, teal); }
 
 .hero__overlay--gradientVertical {
-  background: linear-gradient(to bottom, #6C63FF, #4641FF); }
+  background: linear-gradient(to bottom, teal, teal); }
 
 .hero__mask {
   position: absolute;
@@ -943,7 +943,7 @@ select {
   cursor: pointer; }
   @media (min-width: 992px) {
     .hero__sub__down:hover {
-      color: #6C63FF; } }
+      color: teal; } }
 
 #scrollToNext {
   transition: 0.7s; }
@@ -1058,16 +1058,16 @@ select {
   max-width: 60ch; }
 
 .cta {
-  background: linear-gradient(to right, #6C63FF, #4641FF);
+  background: linear-gradient(to right, teal, #4641FF);
   color: #fff;
   padding: 48pt 0;
   text-align: center; }
 
 .cta--reverse {
-  background: linear-gradient(to left, #6C63FF, #4641FF); }
+  background: linear-gradient(to left, teal, #4641FF); }
 
 .cta--plain {
-  background: #6C63FF; }
+  background: teal; }
 
 .cta--secondary {
   background: #4641FF; }
@@ -1100,7 +1100,7 @@ select {
   padding-right: 16pt;
   display: block;
   cursor: pointer;
-  color: #6C63FF;
+  color: teal;
   font-size: 1.225rem;
   min-width: 33%;
   margin-bottom: 1.5rem; }
@@ -1132,8 +1132,8 @@ select {
   margin-bottom: 8pt; }
 
 .footer__link {
-  color: #6C63FF;
-  border-bottom: 1px dotted #6C63FF;
+  color: teal;
+  border-bottom: 1px dotted teal;
   padding-bottom: 1pt;
   transition: 0.7s; }
   @media (min-width: 992px) {
@@ -1359,11 +1359,11 @@ select {
         opacity: 0.85; }
         .vMenu a:hover {
           opacity: 1;
-          color: #6C63FF; }
+          color: teal; }
         .vMenu a:after {
           display: block;
           content: '';
-          border-bottom: 1px solid #6C63FF;
+          border-bottom: 1px solid teal;
           transform: scaleX(0);
           transition: transform 250ms ease-in-out; }
         .vMenu a:hover:after {
@@ -1381,18 +1381,18 @@ select {
       margin-right: 0.5em; }
 
 .vMenu--active {
-  color: #6C63FF; }
+  color: teal; }
   .vMenu--active:before {
     content: "\2014";
     margin-right: 0.333em; }
   @media (min-width: 992px) {
     .vMenu--active {
       opacity: 1;
-      color: #6C63FF; }
+      color: teal; }
       .vMenu--active:after {
         display: block;
         content: '';
-        border-bottom: 1px solid #6C63FF;
+        border-bottom: 1px solid teal;
         transform: none;
         transition: none; } }
 
