--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -148,3 +148,32 @@
     border-left: .5rem solid teal;
     padding-left: 2rem;
 }
+.img {
+    cursor: zoom-in;
+}
+
+.window {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    text-align: center;
+    visibility: hidden;
+    opacity: 0;
+    background-color: rgba(255, 255, 255, 0.95);
+    -webkit-transition: all 0.3s;
+    -webkit-transform: translateX(-50%) translateY(-50%) scale(0.6);
+}
+
+.window img {
+    height: 88%;
+    margin-top: 5.5%;
+    align-content: center;
+}
+
+.window-show {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
+}
